[gd_scene load_steps=3 format=3 uid="uid://wsn3sdtkkuiq"]

[ext_resource type="PackedScene" uid="uid://cwwp6l365mm0f" path="res://ui/menus/base_menu.tscn" id="1_v1d1b"]
[ext_resource type="Script" path="res://ui/menus/fabricator.gd" id="2_o6opr"]

[node name="Fabricator" instance=ExtResource("1_v1d1b")]
anchors_preset = -1
anchor_right = 0.399479
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("2_o6opr")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer" index="0"]
layout_mode = 2

[node name="HeaderLabels" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="0"]
layout_mode = 2

[node name="ScrapAmount" type="Label" parent="MarginContainer/VBoxContainer/HeaderLabels" index="0"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Scrap: 000000"

[node name="NamePlate" type="Label" parent="MarginContainer/VBoxContainer/HeaderLabels" index="1"]
layout_mode = 2
size_flags_horizontal = 3
text = "DDCC Fabricator"
horizontal_alignment = 2

[node name="CraftOptions" type="GridContainer" parent="MarginContainer/VBoxContainer" index="1"]
layout_mode = 2
size_flags_vertical = 3
columns = 2

[node name="NewStockDrone" type="Button" parent="MarginContainer/VBoxContainer/CraftOptions" index="0"]
layout_mode = 2
text = "New Stock Drone"

[node name="RandomAugment" type="Button" parent="MarginContainer/VBoxContainer/CraftOptions" index="1"]
layout_mode = 2
text = "Random Augment"

[node name="RepairKit" type="Button" parent="MarginContainer/VBoxContainer/CraftOptions" index="2"]
layout_mode = 2
text = "Repair Kit"

[node name="TEST_CraftControls" type="HBoxContainer" parent="MarginContainer/VBoxContainer" index="2"]
visible = false
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/TEST_CraftControls" index="0"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CalibrationLabel" type="Label" parent="MarginContainer/VBoxContainer/TEST_CraftControls/VBoxContainer" index="0"]
layout_mode = 2
text = "Calibration: 100.00%"

[node name="BonusScrapSlide" type="HSlider" parent="MarginContainer/VBoxContainer/TEST_CraftControls/VBoxContainer" index="1"]
layout_mode = 2

[node name="AddToQueueBtn" type="Button" parent="MarginContainer/VBoxContainer/TEST_CraftControls/VBoxContainer" index="2"]
layout_mode = 2
text = "Add to Queue"

[node name="CraftingInfo" type="Label" parent="MarginContainer/VBoxContainer/TEST_CraftControls" index="1"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "T1: 50%
T2: 30%
T3: 15%
T4: 5%

Additional Info?"

[connection signal="pressed" from="MarginContainer/VBoxContainer/CraftOptions/NewStockDrone" to="." method="_on_fabricate_item_button_pressed" binds= ["new_stock_drone"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CraftOptions/RandomAugment" to="." method="_on_fabricate_item_button_pressed" binds= ["drone_augment_random"]]
[connection signal="pressed" from="MarginContainer/VBoxContainer/CraftOptions/RepairKit" to="." method="_on_fabricate_item_button_pressed" binds= ["repair_kit"]]
